--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,7 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
     // Markdown
-    implementation 'com.github.mukeshsolanki:MarkdownView-Android:2.0.0'
+    implementation 'com.github.jeziellago:compose-markdown:0.3.2'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
